# txtastic

./: .gitignore  Cargo.toml  README.md
src/: main.rs  rng.rs  txt.rs
templates/: index.html.hbs  txt.html.hbs
