[package]
name = "txtastic"
version = "0.0.2"
edition = "2021"

[dependencies]

# "Rand" is a library for random number generation.
# This library is only used to generate random IDs.
rand = "0.8.5"

# Rocket is a web framework for Rust that makes it simple to write fast, secure web applications.
# I've chosen this library because it's highly ergonomic.
rocket = "=0.5.0-rc.3"

# Adds support for dynamic template rendering to Rocket.
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["handlebars"] }
